--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -3,80 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>Arrays</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <p><em>Hint: Use the JavaScript Console to see the results </em></p>
-  <script>
 
-    // Some data you can work with
+  <table>
+    <thead>
+      <tr>
+          <th>First Name</th>
+          <th>LastName</th>
+          <th>Date of birth</th>
+          <th>Passsed</th>
+      </tr>
+    </thead>
+    <tbody id="tableData"></tbody>
+  </table>
 
-    const inventors = [
-      { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
-      { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
-      { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
-      { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
-      { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
-      { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
-      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
-      { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
-      { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
-      { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
-    ];
+  <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
+  <div id="task1"></div>
+  
 
-    const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
-
-    // 1. Filter the list of inventors for those who were born in the 1500's
-
-    // 2. Give us an array of the inventors' first and last names
-
-    // 3. Sort the inventors by birthdate, oldest to youngest
-
-    // 4. How many years did all the inventors live?
-
-    // 5. Sort the inventors by years lived
-
-    // 6. Sort the people alphabetically by last name
-
-    // 7. Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
-	
-	//////////////////////////////////////
-    const people = [
-      { name: 'Wes', year: 1988 },
-      { name: 'Kait', year: 1986 },
-      { name: 'Irv', year: 1970 },
-      { name: 'Lux', year: 2015 }
-    ];
-
-    const comments = [
-      { text: 'Love this!', id: 523423 },
-      { text: 'Super good', id: 823423 },
-      { text: 'You are the best', id: 2039842 },
-      { text: 'Ramen is my fav food ever', id: 123523 },
-      { text: 'Nice Nice Nice!', id: 542328 }
-    ];
-
-	// 8. Is at least one person 19 or older?
-	
-	// 9. Is everyone 19 or older?
-
-    // 10. Find the comment with the ID of 823423
-
-    // 11. Delete the comment with the ID of 823423
-	
-	// Bonus algorithms:
-	
-	// 12. Write a function to reverse a string
-			//reverseStr('hello') => 'olleh'
-	
-	// 13. Write a function that reverses an integer 
-			// reverseInt(45) => 54
-			// reverseInt(900) => 9
-			// reverseInt(-17) => -71
-			// reverseInt(-60) => -6
-			
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
