Added solution for task1 and task2

--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -22,7 +22,16 @@
 
   <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
   <div id="task1"></div>
-  
+
+  <button id="toggle" onclick="task2()">Inventors' first and last names</button>
+  <table>
+    <thead>
+      <tr>
+          <th>Name</th>
+      </tr>
+    </thead>
+    <tbody id="task2Data"></tbody>
+  </table>
 
   <script src="main.js"></script>
 </body>
