--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -8,6 +8,23 @@
 <body>
   <p><em>Hint: Use the JavaScript Console to see the results </em></p>
 
+  <!-- <table>
+      <thead>
+        <tr>
+          <th>First Name</th>
+          <th>LastName</th>
+          <th>Date of birth</th>
+          <th>Passsed</th>
+          <th>Task1</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td id="col1"></td>
+        </tr>
+      </tbody>
+  </table> -->
+
   <table>
     <thead>
       <tr>
@@ -15,12 +32,14 @@
           <th>LastName</th>
           <th>Date of birth</th>
           <th>Passsed</th>
+          <th>Tasks</th>
+          <th>Results</th>
       </tr>
     </thead>
     <tbody id="tableData"></tbody>
   </table>
 
-  <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
+  <!-- <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
   <div id="task1"></div>
 
   <button id="toggle" onclick="task2()">Inventors' first and last names</button>
@@ -31,7 +50,7 @@
       </tr>
     </thead>
     <tbody id="task2Data"></tbody>
-  </table>
+  </table> -->
 
   <script src="main.js"></script>
 </body>
