Task1 - Task11 solutions

--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -7,37 +7,31 @@
 </head>
 <body>
   <p><em>Hint: Use the JavaScript Console to see the results </em></p>
-
-  <!-- <table>
-      <thead>
-        <tr>
-          <th>First Name</th>
-          <th>LastName</th>
-          <th>Date of birth</th>
-          <th>Passsed</th>
-          <th>Task1</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td id="col1"></td>
-        </tr>
-      </tbody>
-  </table> -->
-
+  
   <table>
     <thead>
       <tr>
-          <th>First Name</th>
-          <th>LastName</th>
-          <th>Date of birth</th>
-          <th>Passsed</th>
           <th>Tasks</th>
           <th>Results</th>
       </tr>
     </thead>
     <tbody id="tableData"></tbody>
   </table>
+
+  <div class="legend">
+    <span class="header">Legend</span>
+    <span>Task1: Filter the list of inventors for those who were born in the 1500's</span>
+    <span>Task2: Give us an array of the inventors' first and last names</span>
+    <span>Task3: Sort the inventors by birthdate, oldest to youngest</span>
+    <span>Task4: How many years did all the inventors live?</span>
+    <span>Task5: Sort the inventors by years lived</span>
+    <span>Task6: Sort the people alphabetically by last name</span>
+    <span>Task7: Sum up the instances of each of these (refers to a specific array)</span>
+    <span>Task8: Check if at least one person is 19 or older?</span>
+    <span>Task9: Check if everyone is 19 or older?</span>
+    <span>Task10: Find the comment with the ID of 823423</span>
+    <span>Task11: Delete the comment with the ID of 823423</span>
+  </div>
 
   <!-- <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
   <div id="task1"></div>
