--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -33,6 +33,13 @@
     <span>Task11: Delete the comment with the ID of 823423</span>
   </div>
 
+  <div class="task12">
+    <p>Task12</p>
+    <input id="inputValue" type="text">
+    <button onclick="reverseString2()">Try it</button>
+    <span class="result"></span>
+  </div>
+
   <!-- <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
   <div id="task1"></div>
 
