--- a/02 - Array Operations/index-START.html
+++ b/02 - Array Operations/index-START.html
@@ -33,26 +33,22 @@
     <span>Task11: Delete the comment with the ID of 823423</span>
   </div>
 
-  <div class="task12">
-    <p>Task12</p>
-    <input id="inputValue" type="text">
-    <button onclick="reverseString2()">Try it</button>
-    <span class="result"></span>
+  <div class="inputs">
+    <div class="task12">
+      <p>Task12</p>
+      <input id="inputValue" type="text">
+      <button onclick="reverseString2()">Reverse</button>
+      <span class="result"></span>
+    </div>
+  
+    <div class="task13">
+      <p>Task13</p>
+      <input id="number" type="text">
+      <button onclick="reverseNumber()">Reverse</button>
+      <span class="numberResult"></span>
+    </div>
   </div>
-
-  <!-- <button id="toggle" onclick="task1()">Inventors who were born in the 1500's</button>
-  <div id="task1"></div>
-
-  <button id="toggle" onclick="task2()">Inventors' first and last names</button>
-  <table>
-    <thead>
-      <tr>
-          <th>Name</th>
-      </tr>
-    </thead>
-    <tbody id="task2Data"></tbody>
-  </table> -->
-
+  
   <script src="main.js"></script>
 </body>
 </html>
