Added forecast for 5 days for a specific city

--- a/03 - Weather App/index-START.html
+++ b/03 - Weather App/index-START.html
@@ -9,10 +9,12 @@
 
   <form class="search-form">
     <input type="text" class="search" placeholder="City Name"/>
-	<button type="submit">Search</button>
+	  <button id="btn" type="submit">Search</button>
   </form>
-<script>
 
-</script>
+  <div id="result"></div> 
+
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  <script src="main.js"></script>
   </body>
 </html>
